change position of reset button look into diferant ways of making the calculator that does not use switch cases

--- a/public/calculator.html
+++ b/public/calculator.html
@@ -17,8 +17,9 @@
     ><input type="number" id="snumber" min="0" max="100" />
 
     <button class="enter" value="=" onclick="calculate()">=</button>
-
+<div>
     <button onclick="resetbtn()">Reset</button>
+  </div>
 
     <div>
       Result
